<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingTop="@dimen/_62sdp">

            <!--  <com.google.android.gms.common.SignInButton
                  android:id="@+id/sign_in_button_google"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"

      /> -->

            <!--  Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:textSize="@dimen/_16sdp"


                >

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_16sdp" />
            </android.support.design.widget.TextInputLayout>

            <!--  Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:textSize="@dimen/_16sdp"

                >

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/sifre"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_16sdp" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--   <CheckBox
                     android:id="@+id/cbRemember"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_40sdp"
                     android:checked="false"
                     android:text="@string/beniHatirla"
                     android:textSize="@dimen/_13sdp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true" /> -->

                <TextView
                    android:id="@+id/btn_reset_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/btn_forgot_password"
                    android:textAlignment="center"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />
            </RelativeLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@color/colorAccent"
                android:padding="@dimen/_12sdp"
                android:text="@string/giris"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16sdp"
                android:gravity="center"
                android:text="@string/hesabOlustur"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_16sdp" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:visibility="gone" />
</RelativeLayout>